<resources>
    <string name="app_name" translatable="false">Quizer</string>
    <string name="correct_text" translatable="false">Correct!</string>
    <string name="incorrect_text" translatable="false">Incorrect!</string>
    <string name="result">You have %d of %d correct answers!</string>
    <string name="bad_result">You have no correct answers, try again!</string>
    <string name="buy_btn_text">Buy</string>
    <string name="title_activity_quiz_pager">QuizPagerActivity</string>
    <string name="share_text">Hey! I\'ve completed quiz "%s" with %d correct answers!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about_btn">About</string>
    <string name="starDescription">Star</string>
    <string name="result_dialog_title">Results</string>
    <string name="ok_btn">OK</string>
    <string name="dialog_rating_question">How much do you like this test?</string>
    <string name="about_menu_item">About</string>
    <string name="buy_notice">You should buy this quiz first</string>
    <string name="share_btn">Share</string>
    <string name="user_cabinet_btn">User cabinet</string>
    <string name="create_photo_btn">Create photo</string>
    <string name="rating_text">Rating: %d</string>
    <string name="registration_text">Registration Page</string>
    <string name="nickname_def_text">NickName</string>
    <string name="email_def_text">Email</string>
    <string name="password_def_text">Password</string>
    <string name="register_btn">Register</string>
    <string name="update_quizList_btn">Update quiz list</string>
    <string name="login_text">Log in page</string>
    <string name="login_btn">Log in</string>
    <string name="no_quizzes">There aren\'t any quizzes</string>
    <string name="set_server_ip">Set server IP</string>
    <string name="set_server_ip_string">Set server IP</string>
    <string name="save">Save</string>
</resources>